# DGM_in_rust

./: .gitignore  Cargo.toml
inputfiles/: airfoil.msh  freestream.json  initial_solution.json  parameters.json
outputfiles/: mesh.vtk
src/: basis_function.rs  boundary.rs  debug_utils.rs  gauss_point.rs  initialization.rs  io.rs  main.rs  mesh.rs  readfile.rs  solver.rs  spatial_disc.rs  temporal_disc.rs
src/io/: boundary_condition_parser.rs  initial_solution_parser.rs  mesh_parser.rs  param_parser.rs  write_results.rs
src/spatial_disc/: basis_function.rs  boundary.rs  boundary_condition.rs  flux.rs  gauss_point.rs  limiter.rs  local_characteristics.rs  mod.rs  quadrature.rs  viscous.rs
src/spatial_disc/limiter/: hweno.rs  weno.rs
src/spatialdisc/: basis_function.rs  flux.rs  gauss_point.rs  mod.rs  quadrature.rs
src/temporal_disc/: euler_forward.rs  mod.rs  rk3.rs  rk4.rs
src/temporaldisc/: explicit.rs
