[package]
name = "dgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
itertools = "0.10"
ndarray = {version = "0.15.6", features = ["rayon"]}
vtkio = { git = "https://github.com/elrnv/vtkio.git", branch = "master" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
csv = "1.3.0"
